--- a/index.html
+++ b/index.html
@@ -34,24 +34,6 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/Bay3.jpg" alt="Bayonetta 3">
-					<h3><br>Bayonetta 3<br></h3>
-					<p class="Date">28.10.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/KirbyFL.png" alt="Kirby and the Forgotten Land">
-					<h3>Kirby and the Forgotten Land</h3>
-					<p class="Date">25.03.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/PokemonArc.jpg" alt="Pokemon Legends: Arceus">
-					<h3>Pokemon Legends: Arceus</h3>
-					<p class="Date">28.01.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
                     <img src="img/SSBU.png" alt="Super Smash Bros. Ultimate">
 					<h3>Super Smash Bros. Ultimate</h3>
 					<p class="Date">07.12.2018</p>
@@ -70,15 +52,15 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/1-2-Switch.jpg" alt="1-2-Switch">
-					<h3>1-2-Switch</h3>
-					<p class="Date">03.03.2017</p>
+                    <img src="img/KirbySA.jpg" alt="Kirby: Star Allies">
+					<h3>Kirby: Star Allies</h3>
+					<p class="Date">16.03.2018</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/Pokemon Violet.jpg" alt="Pokemon Violet">
-					<h3>Pokemon Violet</h3>
-					<p class="Date">18.11.2022</p>
+                    <img src="img/KirbyFL.png" alt="Kirby and the Forgotten Land">
+					<h3>Kirby and the Forgotten Land</h3>
+					<p class="Date">25.03.2022</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -88,21 +70,39 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/Arms.jpg" alt="Arms">
-					<h3>Arms</h3>
-					<p class="Date">15.06.2017</p>
+                    <img src="img/PokemonArc.jpg" alt="Pokemon Legends: Arceus">
+					<h3>Pokemon Legends: Arceus</h3>
+					<p class="Date">28.01.2022</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/KirbySA.jpg" alt="Kirby: Star Allies">
-					<h3>Kirby: Star Allies</h3>
-					<p class="Date">16.03.2018</p>
+                    <img src="img/Pokemon Violet.jpg" alt="Pokemon Violet">
+					<h3>Pokemon Violet</h3>
+					<p class="Date">18.11.2022</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
                     <img src="img/Sonic Mania Plus.jpg" alt="Sonic Mania Plus">
 					<h3>Sonic Mania Plus</h3>
 					<p class="Date">17.07.2018</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/Bay3.jpg" alt="Bayonetta 3">
+					<h3>Bayonetta 3</h3>
+					<p class="Date">28.10.2022</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/1-2-Switch.jpg" alt="1-2-Switch">
+					<h3>1-2-Switch</h3>
+					<p class="Date">03.03.2017</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/Arms.jpg" alt="Arms">
+					<h3>Arms</h3>
+					<p class="Date">15.06.2017</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -114,12 +114,6 @@
 	        </section>
 	        <h2 id="PlayStation">PlayStation</h2>
             <section class="cards" name="PlayStation">
-                <div class="card">
-                    <img src="img/mmZ.jpg" alt="Mega Man Zero / Zx Legacy Collection">
-					<h3>Mega Man Zero / Zx Legacy Collection</h3>
-					<p class="Date">25.02.2020</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
 				<div class="card">
                     <img src="img/Crisis Core.jpg" alt="Crisis Core: Final Fantasy VII Reunion">
 					<h3>Crisis Core: Final Fantasy VII Reunion</h3>
@@ -133,27 +127,9 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/Stray.png" alt="Stray">
-					<h3>Stray</h3>
-					<p class="Date">20.09.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/Sonic Frontiers.png" alt="Sonic Frontiers">
-					<h3>Sonic Frontiers</h3>
-					<p class="Date">08.11.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/dmc5se.png" alt="Devil May Cry 5 Special Edition">
-					<h3>Devil May Cry 5 Special Edition</h3>
-					<p class="Date">01.12.2020</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/GoT.jpg" alt="Призрак Цушимы">
-					<h3>Ghost of Tsushima Director's Cut</h3>
-					<p class="Date">20.08.2021</p>
+                    <img src="img/FF15.jpg" alt="Final Fantasy XV">
+					<h3>Final Fantasy XV</h3>
+					<p class="Date">29.11.2016</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -163,15 +139,45 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/FF15.jpg" alt="Final Fantasy XV">
-					<h3>Final Fantasy XV</h3>
-					<p class="Date">29.11.2016</p>
+                    <img src="img/NioH.jpg" alt="Nioh Collection">
+					<h3>Nioh Collection</h3>
+					<p class="Date">05.02.2021</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/dmc5se.png" alt="Devil May Cry 5 Special Edition">
+					<h3>Devil May Cry 5 Special Edition</h3>
+					<p class="Date">01.12.2020</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/Sonic Frontiers.png" alt="Sonic Frontiers">
+					<h3>Sonic Frontiers</h3>
+					<p class="Date">08.11.2022</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+                <div class="card">
+                    <img src="img/mmZ.jpg" alt="Mega Man Zero / Zx Legacy Collection">
+					<h3>Mega Man Zero / Zx Legacy Collection</h3>
+					<p class="Date">25.02.2020</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/GoT.jpg" alt="Призрак Цушимы">
+					<h3>Ghost of Tsushima Director's Cut</h3>
+					<p class="Date">20.08.2021</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
                     <img src="img/SW.jpg" alt="Star Wars Jedi: Survivor">
 					<h3>Star Wars Jedi: Survivor</h3>
 					<p class="Date">28.04.2023</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/Stray.png" alt="Stray">
+					<h3>Stray</h3>
+					<p class="Date">20.09.2022</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -186,12 +192,6 @@
 					<p class="Date">21.02.2023</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
-				<div class="card">
-                    <img src="img/NioH.jpg" alt="Nioh Collection">
-					<h3>Nioh Collection</h3>
-					<p class="Date">05.02.2021</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
             </section>
             <h2 id="XboX">XboX</h2>
             <section class="cards" name="XboX">
@@ -199,12 +199,6 @@
                     <img src="img/NieR.jpg" alt="NieR Replicant">
 					<h3>NieR Replicant ver.1.22474487139...</h3>
 					<p class="Date">23.04.2021</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/Hogwarts Legacy.png" alt="Hogwarts Legacy">
-					<h3>Hogwarts Legacy</h3>
-					<p class="Date">10.02.2023</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -220,15 +214,33 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
+                    <img src="img/yakuza.jpg" alt="Like a Dragon: Ishin!">
+					<h3>Like a Dragon: Ishin!</h3>
+					<p class="Date">21.02.2023</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/Hogwarts Legacy.png" alt="Hogwarts Legacy">
+					<h3>Hogwarts Legacy</h3>
+					<p class="Date">10.02.2023</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
                     <img src="img/Vampyr.jpg" alt="Vampyr">
 					<h3>Vampyr</h3>
 					<p class="Date">15.11.2017</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
-                    <img src="img/yakuza.jpg" alt="Like a Dragon: Ishin!">
-					<h3>Like a Dragon: Ishin!</h3>
-					<p class="Date">21.02.2023</p>
+                    <img src="img/Lies of P.jpg" alt="Lies of P">
+					<h3>Lies of P</h3>
+					<p class="Date">15.08.2023</p>
+					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
+                </div>
+				<div class="card">
+                    <img src="img/SoulCalibur.jpg" alt="SoulCalibur VI">
+					<h3>SoulCalibur VI</h3>
+					<p class="Date">19.10.2018</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
 				<div class="card">
@@ -241,18 +253,6 @@
                     <img src="img/Klonoa.jpg" alt="Klonoa Phantasy Reverie Series">
 					<h3>Klonoa Phantasy Reverie Series</h3>
 					<p class="Date">08.06.2022</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/SoulCalibur.jpg" alt="SoulCalibur VI">
-					<h3>SoulCalibur VI</h3>
-					<p class="Date">19.10.2018</p>
-					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
-                </div>
-				<div class="card">
-                    <img src="img/Lies of P.jpg" alt="Lies of P">
-					<h3>Lies of P</h3>
-					<p class="Date">15.08.2023</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
             </section>
@@ -299,14 +299,18 @@
                     </div>
                     <div class="row">
                         <div class="col-25">
-                    <label for="comment">Комментари: </label></div>
-                    <div class="col-75">
-                    <textarea  id="comment" name="comment" maxlength="2000" placeholder="Ваши пожелания"></textarea>
-                    </div></div>
-                    <div id="bttn-row" class="row"><div class="col-25"></div>
-                    <div class="col-75">
-                    <div id="bttnR"><input type="reset" value="Сброс"></div>
-                    <div id="bttnS"><input type="button" onclick="openFormD()" value="Купить"></div></div></div>
+						<label for="comment">Комментари: </label>
+						</div>
+						<div class="col-75">
+							<textarea  id="comment" name="comment" maxlength="2000" placeholder="Ваши пожелания"></textarea>
+						</div>
+					</div>
+					<div class="row"><div class="col-25"></div>
+						<div class="col-75" id="bttn-row">
+							<input id="bttnR" type="reset" value="Сброс">
+							<input id="bttnS" type="button" onclick="openFormD()" value="Купить">
+						</div>
+					</div>
                 </form>
             </div>
         </div>
