--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
 				<div class="card">
                     <img src="img/mmX.jpg" alt="Mega Man X Legacy Collection 1 + 2">
-					<h3>Mega Man X Legacy Collection 1 + 2</h3>
+					<h3>MegaMan X Legacy Collection 1 + 2</h3>
 					<p class="Date">24.07.2018</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
@@ -157,8 +157,8 @@
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
                 <div class="card">
-                    <img src="img/mmZ.jpg" alt="Mega Man Zero / Zx Legacy Collection">
-					<h3>Mega Man Zero / Zx Legacy Collection</h3>
+                    <img src="img/mmZ.jpg" alt="Mega Man Zero / ZX Legacy Collection">
+					<h3>MegaMan Zero/ZX Legacy Collection</h3>
 					<p class="Date">25.02.2020</p>
 					<button class="buy" onclick="openFormM()" href="#openModal">Buy</button>
                 </div>
